vbnc/vbnc/vbnc/tests/Errors/30512.vb
Option Strict On
Class DoLoopWhile2
	Sub Test
		Do
			Dim i As Integer
		Loop While 0
	End Sub
End Class
